--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "package": "plasmo package"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "plasmo": "0.82.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
