--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.0",
+    "@testing-library/react": "^14.0.0",
     "@types/chrome": "0.0.243",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "jest": "^29.6.2",
     "postcss": "8.4.28",
     "prettier": "3.0.2",
     "typescript": "5.1.6"
